A/aws-sigv4-proxy-admission-controller-KQE5RWTdTX7zptV/aws-sigv4-proxy-admission-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-aws-sigv4-proxy-admission-controller-webhook-service
  namespace: KQE5RWTdTX7zptV
  labels:
    app: release-name-aws-sigv4-proxy-admission-controller
    helm.sh/chart: aws-sigv4-proxy-admission-controller-0.1.2
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: release-name-aws-sigv4-proxy-admission-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-aws-sigv4-proxy-admission-controller-webhook-deployment
  namespace: KQE5RWTdTX7zptV
  labels:
    app: release-name-aws-sigv4-proxy-admission-controller
    helm.sh/chart: aws-sigv4-proxy-admission-controller-0.1.2
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-aws-sigv4-proxy-admission-controller
  template:
    metadata:
      labels:
        app: release-name-aws-sigv4-proxy-admission-controller
    spec:
      serviceAccountName: release-name-aws-sigv4-proxy-admission-controller
      containers:
        - name: release-name-aws-sigv4-proxy-admission-controller
          image: public.ecr.aws/aws-observability/aws-sigv4-proxy-admission-controller:1.0
          imagePullPolicy: IfNotPresent
          args:
            - -tlsCertFile=/etc/webhook/certs/cert.pem
            - -tlsKeyFile=/etc/webhook/certs/key.pem
          ports:
            - containerPort: 443
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: release-name-aws-sigv4-proxy-admission-controller-webhook-certs
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-aws-sigv4-proxy-admission-controller-webhook-config
  labels:
    app: release-name-aws-sigv4-proxy-admission-controller
    helm.sh/chart: aws-sigv4-proxy-admission-controller-0.1.2
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: release-name-aws-sigv4-proxy-admission-controller.k8s.aws
    clientConfig:
      service:
        name: release-name-aws-sigv4-proxy-admission-controller-webhook-service
        namespace: default
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVRENDQWppZ0F3SUJBZ0lSQUppZUVUTm5QeCtlYkZSMkEzRUs2NXN3RFFZSktvWklodmNOQVFFTEJRQXcKTWpFd01DNEdBMVVFQXhNbllYZHpMWE5wWjNZMExYQnliM2g1TFdGa2JXbHpjMmx2YmkxamIyNTBjbTlzYkdWeQpMV05oTUI0WERUSXlNRFl4TWpBNU5EY3dNMW9YRFRNeU1EWXdPVEE1TkRjd00xb3dNakV3TUM0R0ExVUVBeE1uCllYZHpMWE5wWjNZMExYQnliM2g1TFdGa2JXbHpjMmx2YmkxamIyNTBjbTlzYkdWeUxXTmhNSUlCSWpBTkJna3EKaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUE3cVZDOVF5S2syNGZuT3dDNm9WTmxHbWFYVjNuQjNTLwptV0FzYk1WWjdW [...]
    rules:
      - operations:
          - CREATE
        apiGroups:
          - apps
          - ""
        apiVersions:
          - v1
        resources:
          - pods
    sideEffects: None
    admissionReviewVersions:
      - v1beta1
